Updated meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <meta property="og:title" content="BackSlash Development" />
+        <meta property="og:image" content="https://github.com/BackSlash-Development/backslash-website/blob/main/images/white-blue-solid-logo.png">
+        <meta property="og:description" content="A professional development studio based in the United Kingdom & Thailand.">
+
         <link rel="stylesheet" href="styles/style.css">
 
         <title>BackSlash Development</title>
