Added meta tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
         <meta property="og:image" content="https://github.com/BackSlash-Development/backslash-website/blob/main/images/white-blue-solid-logo.png">
         <meta property="og:description" content="A professional development studio based in the United Kingdom & Thailand.">
 
+        <meta name="twitter:title" content="BackSlash Development">
+        <meta name="twitter:description" content="A professional development studio based in the United Kingdom & Thailand.">
+        <meta name="twitter:image" content="https://github.com/BackSlash-Development/backslash-website/blob/main/images/white-blue-solid-logo.png">
+        <meta name="twitter:card" content="summary_large_image">
+
         <link rel="stylesheet" href="styles/style.css">
+        
+        
 
         <title>BackSlash Development</title>
     </head>
