Working on pricing.html

--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta property="og:title" content="BackSlash Development" />
-        <meta property="og:image" content="https://github.com/BackSlash-Development/backslash-website/blob/main/images/white-blue-solid-logo.png">
+        <meta property="og:image" content="images/logo/white-blue-solid-logo.png">
         <meta property="og:description" content="A professional development studio based in the United Kingdom & Thailand.">
 
         <meta name="twitter:title" content="BackSlash Development">
         <meta name="twitter:description" content="A professional development studio based in the United Kingdom & Thailand.">
-        <meta name="twitter:image" content="https://github.com/BackSlash-Development/backslash-website/blob/main/images/white-blue-solid-logo.png">
+        <meta name="twitter:image" content="images/logo/white-blue-solid-logo.png">
         <meta name="twitter:card" content="summary_large_image">
 
         <link rel="stylesheet" href="styles/style.css">
         
         
 
-        <title>BackSlash Development</title>
+        <title>[BackSlash Development] Home</title>
     </head>
     <body>
         <div id="center">
-            <img src="images/black-transparent-logo.png" alt="BackSlash Logo" style="width:300px;height:200px;">
+            <img src="images/logo/black-transparent-logo.png" alt="BackSlash Logo" style="width:300px;height:200px;">
             <h1>BackSlash Development</h1>
             <p>This page is in development - check back soon.</p>
+            <br>
+            <p>However, you can view our <a id="aUnderline" href="pricing.html">pricing</a>...</p>
         </div>
     </body>
 </html>
