Working on pricing page
Must make page responsive

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </head>
     <body>
         <div id="center">
-            <img src="images/logo/black-transparent-logo.png" alt="BackSlash Logo" style="width:300px;height:200px;">
-            <h1>BackSlash Development</h1>
+            <img id="img" src="images/logo/black-transparent-logo.png" alt="BackSlash Logo" style="width:300px;height:200px;">
+            <h1 id="mainH1">BackSlash Development</h1>
             <p>This page is in development - check back soon.</p>
             <br>
             <p>However, you can view our <a id="aUnderline" href="pricing.html">pricing</a>...</p>
