--- a/pricing.html
+++ b/pricing.html
@@ -20,14 +20,24 @@
         <title>[BackSlash Development] Pricing</title>
     </head>
     <body>
+        <div id="navRow">
+            <img id="navRowIMG" src="images/logo/black-transparent-logo.png" alt="BackSlash Logo" style="width:100px;height:66.666667px;">
+            <h1 id="navRowH1">BackSlash Development</h1>
+        </div>
         <div id="wrapper">
             <div id="leftColumn">
+                <h1>Small Minecraft Plugin</h1>
+                <p>Estimated work time: <bold>1-2 days</bold></p>
                 <button id="purchaseIntended"><a href="#">Small Plugin <bold>£5-40</bold></a></button>
             </div>
             <div id="midColumn">
+                <h1>Medium Minecraft Plugin</h1>
+                <p>Estimated work time: <bold>2 days - 2 weeks</bold></p>
                 <button id="purchaseIntended"><a href="#">Medium Plugin <bold>£40-200</bold></a></button>
             </div>
             <div id="rightColumn">
+                <h1>Large Minecraft Plugin</h1>
+                <p>Estimated work time: <bold>2 weeks+</bold></p>
                 <button id="purchaseIntended"><a href="#">Large Plugin <bold>£200+</bold></a></button>
             </div>
         </div>
